IMPALA-11489: Fix int overflow in >2GB ORC files

This can lead to returning an error "Invalid read len.", but can't lead
to other problems like reading corrupt data or crashing.

The fix is trivial, but creating automatic tests for it seems hard,
so no regression test is added.

Change-Id: Id8438d3512b0ebaafd319f369c1f6871d980a599
Reviewed-on: http://gerrit.cloudera.org:8080/18827
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Reviewed-by: Csaba Ringhofer <csringhofer@cloudera.com>
Tested-by: Csaba Ringhofer <csringhofer@cloudera.com>
Reviewed-on: http://gerrit.cloudera.org:8080/18886
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>